--- a/assets/templates/customer/customer-restaurent-select.html
+++ b/assets/templates/customer/customer-restaurent-select.html
@@ -31,7 +31,6 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
-        <script src="{% static 'js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
@@ -58,9 +57,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link "> Dashboard</a>
+                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link"> Dashboard</a>
 
-                        <a href="{% url 'user_book_table' %}" class="nav-item nav-link active ">Book Table</a>
+                        <a href="{% url 'user_book_table' %}" class="nav-item nav-link  active ">Book Table</a>
 
 
 
@@ -97,144 +96,42 @@
             </div>
         </div>
         <!-- Navbar & Hero End -->
-        
+        <div class="container h-100">
+            <div class="d-flex justify-content-center h-100">
+                <div class="searchbar text-white">
+                    <input class="search_input" type="text" name="" placeholder="Restaurant name or a dish...">
+                    <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                </div>
+            </div>
+        </div>  
         <!-- Main -->
 
        <!-- Reservation Start -->
-       <div class="container-fluid py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="row g-0">
-            <div class="col-md-6">
-                <div class="video">
-                    <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                        <span></span>
-                    </button>
-                </div>
-            </div>
-            <div class="col-md-6 bg-dark d-flex align-items-center">
-                <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-                    <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
-                    <h1 class="text-white mb-4">Book A Table Online</h1>
-                                <form method="post">
-                                    {% csrf_token %}
-                                
-                                    <div class="row g-3">
-                                        {% for u in user %}
-                                        <div class="col-md-6">
-                                            <div class="form-floating">
-                                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" value="{{u.user_name}}">
-                                                <label for="name">Your Name</label>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-md-6">
-                                            <div class="form-floating">
-                                                <input type="tel" name="mobile" class="form-control" id="number" placeholder="Phone Number" value="{{u.user_mobile}}">
-                                                <label for="number">Phone Number</label>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-md-6">
-                                            <div class="form-floating">
-                                                <input type="email" name="email" class="form-control" id="email" placeholder="Your Email" value="{{u.user_email}}">
-                                                <label for="email">Your Email</label>
-                                            </div>
-                                        </div>
-                                        {% endfor %}
-                                        <div class="col-md-6">
-                                            <div class="form-floating" data-target-input="nearest">
-                                                <input type="date" name="date" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
-                                                <label for="datetime">Date</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-floating"  data-target-input="nearest">
-                                                <input type="time" name="time" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
-                                                <label for="datetime">Time</label>
-                                            </div>
-                                        </div>
-
-
-                                        <div class="col-md-6">
-
-                                            <div class="form-floating">
-                                                <select class="form-select" name="restaurant" id="select3">
-                                                     
-                                                    {% for r in res %}
-                                                    <option>{{r.restaurent.restaurent_name}}</option>
-                                                    
-                                                    {% comment %} <option value="1">Bawarchi</option>
-                                                    <option value="2">Paradise</option>
-                                                    <option value="3">Shaghouse</option>
-                                                    <option value="4">Novotal</option>
-                                                    <option value="5">Kritunga</option>
-                                                    <option value="6">Swagath Grand</option>
-                                                    <option value="7">Minerva Grand</option> {% endcomment %}
+        <div class="container py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
+            <center>
+                <div class="container-fluid">
+                    <div class="row">
+                        {% for r in res %}
+                        <div class="col-lg-3">
+                            <div class="card"  style="width: 18rem;">
+                                <a href="#"> <img src="media/{{r.restaurent_logo}}"
+                                        class="card-img-top" alt="...">
             
-                                                </select>
-                                                <label for="select3"></label>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-floating">
-                                                <select class="form-select" name="table" id="select1">
-                                                     
-                                                    <option>{{r.table_type}}</option>
-                                                    {% endfor %}
-                                                </select>
-                                                <label for="select1"></label>
-                                            </div>
-                                        </div>
-                                        
-                                    
-
-                                    
-
-                                        <div class="col-md-6">
-                                            <div class="form-floating">
-                                                <select class="form-select" name="members" id="select1">
-                                                    <option value="0">No of Members</option>
-                                                    <option >2-4</option>
-                                                    <option >4-8</option>
-                                                    <option >8-10</option>
-                                                    <option >10+</option>
-                                                </select>
-                                                <label for="select1"></label>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-12">
-                                            <div class="form-floating">
-                                                <textarea class="form-control" name="srequest" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                                <label for="message">Special Request</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                                        </div>
+                                    <div class="card-body ">
+                                        <h2>{{r.restaurent_name}}</h2>
+                                        <h5> <small>{{r.restaurent_address}}</small></h5>
+                                        <a href="/user_book_table_res/{{r.restaurent_id}}" class="btn btn-primary w-100 collg-12">Book Table</a>
                                     </div>
-                                </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content rounded-0">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- 16:9 aspect ratio -->
-                    <div class="ratio ratio-16x9">
-                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe>
+                                </a>
+                            </div>
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
-            </div>
+            </center>
         </div>
-    </div>
+
+ 
     <!-- Reservation end -->
 
             <!-- Footer Start -->
