--- a/assets/templates/restaurants/restaurant-login.html
+++ b/assets/templates/restaurants/restaurant-login.html
@@ -31,6 +31,7 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
+        <script src="{% static 'main/js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
@@ -104,6 +105,27 @@
                     <h1 class="text-white mb-4"></h1>
                     <form method="post">
                         {% csrf_token %}
+                        {% if messages %}              
+                            {% for message in messages %}
+                                {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                                    <script>swal({
+                                    title: "HOLD :",
+                                    text: "Login Sucessful",
+                                    icon: "info",
+                                    button: "OK",
+                                    });
+                                </script>
+                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                                <script>swal({
+                                    title: "ERROR :(",
+                                    text: "",
+                                    icon: "error",
+                                    button: "OK",
+                                });
+                                </script>
+                                {% endif %}              
+                            {% endfor %} 
+                        {% endif %}
                         <div class="row g-3">
 
                             <div class="col-md-12 px-5">
