--- a/assets/templates/customer/customer-give-feedback.html
+++ b/assets/templates/customer/customer-give-feedback.html
@@ -59,16 +59,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link active "> Dashboard</a>
+                        <a href="{% url 'user_dashboard' %}" class="nav-item nav-link "> Dashboard</a>
 
                         <a href="{% url 'user_book_table' %}" class="nav-item nav-link">Book Table</a>
 
 
 
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">My Account</a>
+                            <a href="#" class="nav-link dropdown-toggle active " data-bs-toggle="dropdown">My Account</a>
                             <div class="dropdown-menu m-0">
-                                <a href="{% url 'user_view_bookings' %}" class="dropdown-item">Booking
+                                <a href="{% url 'user_view_bookings' %}" class="dropdown-item active ">Booking
                                     Status</a>
                                 <a href="{% url 'user_profile' %}" class="dropdown-item">My Profile </a>
                                  
