--- a/assets/templates/customer/customer-login.html
+++ b/assets/templates/customer/customer-login.html
@@ -31,6 +31,7 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
+        <script src="{% static 'js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
