--- a/assets/templates/restaurants/restaurant-register.html
+++ b/assets/templates/restaurants/restaurant-register.html
@@ -31,6 +31,7 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
+        <script src="{% static 'main/js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
@@ -101,15 +102,29 @@
                         <h1 class="text-white mb-4"></h1>
                         <form method="post" name="myform" enctype="multipart/form-data"   >
                             {% csrf_token %}
-                            {% if messages %}
                             {% for message in messages %}
-                                
-                            <script>
-                                swal("Welcome!", "Registration Succesful!", "success");
-                            </script>
-                                
-                            {% endfor %}
+                            {% if messages %}              
+                             
+                                {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                    <script>swal({
+                                    title: "HOLD :",
+                                    text: "Sucessfully Registered",
+                                    icon: "info",
+                                    button: "OK",
+                                    });
+                                </script>
+                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                                <script>swal({
+                                    title: "ERROR :(",
+                                    text: "Email Already Exists",
+                                    icon: "error",
+                                    button: "OK",
+                                });
+                                </script>
+                                {% endif %}              
+                            
                             {% endif %}
+                            {% endfor %} 
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
