--- a/assets/templates/customer/customer-view-booking-status.html
+++ b/assets/templates/customer/customer-view-booking-status.html
@@ -137,7 +137,7 @@
                   <td>
                   {% if u.status != "Booked" %}
 
-                  {{u.user_table.table_price}}
+                  {{u.price}}
 
                   {% endif %}
                 </td>
