--- a/assets/templates/customer/customer-login.html
+++ b/assets/templates/customer/customer-login.html
@@ -31,7 +31,7 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
-        <script src="{% static 'js/sweetalert.min.js' %}"></script>
+        <script src="{% static 'main/js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
@@ -102,6 +102,19 @@
                     <h1 class="text-white mb-4"></h1>
                     <form method="post">
                         {% csrf_token %}
+                        {% if messages %}              
+                        {% for message in messages %}
+                          {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                              <script>swal({
+                                title: "Error :(",
+                                text: "Invalid Login",
+                                icon: "error",
+                                button: "OK",
+                              });
+                            </script>
+                          {% endif %}              
+                        {% endfor %} 
+                      {% endif %}
                         <div class="row g-3">
 
                             <div class="col-md-12 px-5">
