--- a/assets/templates/restaurants/restaurant-add-menu.html
+++ b/assets/templates/restaurants/restaurant-add-menu.html
@@ -31,7 +31,7 @@
     
         <!-- Template Stylesheet -->
         <link href="{% static 'main/css/style.css'%}" rel="stylesheet">
-        <script src="{% static 'js/sweetalert.min.js' %}"></script>
+        <script src="{% static 'main/js/sweetalert.min.js' %}"></script>
     </head>
 
 <body>
@@ -98,26 +98,26 @@
                                     {% csrf_token %}
                                     {% csrf_token %}
                                     {% if messages %}              
-                            {% for message in messages %}
-                                {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-                                    <script>swal({
-                                    title: "HOLD :",
-                                    text: "Please Login First",
-                                    icon: "info",
-                                    button: "OK",
-                                    });
-                                </script>
-                                {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                                <script>swal({
-                                    title: "ERROR :(",
-                                    text: "Invalid Login",
-                                    icon: "error",
-                                    button: "OK",
-                                });
-                                </script>
-                                {% endif %}              
-                            {% endfor %} 
-                        {% endif %}
+                                        {% for message in messages %}
+                                            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                                <script>swal({
+                                                title: "HOLD :",
+                                                text: "Sucessfully Added Tables",
+                                                icon: "info",
+                                                button: "OK",
+                                                });
+                                            </script>
+                                            {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                                            <script>swal({
+                                                title: "ERROR :(",
+                                                text: "Table Type Already Exists, Please Update Table for any Changes",
+                                                icon: "error",
+                                                button: "OK",
+                                            });
+                                            </script>
+                                            {% endif %}              
+                                        {% endfor %} 
+                                    {% endif %}
                                     <div class="row g-3">
                                         <div class="col-md-12">
                                             <div class="form-floating">
@@ -148,8 +148,15 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-floating">
-                                                <input name="members"  class="form-control" placeholder="Total Tables">
-                                                <label for="tel">Total Members per table</label>
+                                                <select class="form-select" name="members" id="select1">
+                                                    <option value="0">No of Members</option>
+                                                    <option >0-2</option>
+                                                    <option >2-4</option>
+                                                    <option >4-8</option>
+                                                    <option >8-10</option>
+                                                    <option >10+</option>
+                                                </select>
+                                                <label for="select1"></label>
                                             </div>
                                         </div>
                                         <div class="col-12">
